--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ section {
 
 .icon {
   cursor: pointer;
-  height: 5rem;
+  height: 2rem;
 }
 
 /*Buttons*/
@@ -254,3 +254,45 @@ section {
 .btn-container {
   gap: 1rem;
 }
+
+/*about section*/
+
+#about{
+  position: relative;
+}
+
+.about-containers{
+  gap: 2rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+
+.about-details-container{
+  justify-content: center;
+  flex-direction: column;
+}
+
+.about-containers, .about-details-container{
+  display: flex;
+}
+
+.about-pic{
+  border-radius: 2rem;
+}
+
+.arrow{
+  position: absolute;
+  right: -5rem;
+  bottom: 2.5rem;
+}
+
+.details-container{
+  padding: 1.5rem;
+  flex: 1;
+  background: white;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  text-align: center
+}
+
