--- a/style.css
+++ b/style.css
@@ -336,6 +336,11 @@ article{
   justify-content: space-around;
   gap: 0.5rem;
 }
+article h3{
+  width: 8rem;
+}
 article .icon{
   cursor: default;
 }
+
+/*Projects Section*/
