--- a/style.css
+++ b/style.css
@@ -297,31 +297,31 @@ section {
   text-align: center;
 }
 
-.section-container{
+.section-container {
   gap: 4rem;
   height: 80%;
 }
 
 /*Experience Section*/
 
-#experience{
+#experience {
   position: relative;
 }
 
-.experience-sub-title{
+.experience-sub-title {
   color: rgb(85, 85, 85);
   font-weight: 600;
   font-size: 1.75rem;
   margin-bottom: 2rem;
 }
 
-.experience-details-container{
+.experience-details-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
 
-.article-container{
+.article-container {
   display: flex;
   text-align: initial;
   flex-wrap: wrap;
@@ -330,17 +330,93 @@ section {
   justify-content: space-around;
 }
 
-article{
+article {
   display: flex;
   width: 10rem;
   justify-content: space-around;
   gap: 0.5rem;
 }
-article h3{
+article h3 {
   width: 8rem;
 }
-article .icon{
+article .icon {
   cursor: default;
 }
 
 /*Projects Section*/
+
+#projects {
+  position: relative;
+}
+
+.color-container {
+  border-color: rgb(163, 163, 163);
+  background-color: rgb(250, 250, 250);
+}
+
+.project-img {
+  border-radius: 2rem;
+  width: 90%;
+  height: 90%;
+}
+
+.project-title {
+  margin: 1rem;
+  color: black;
+}
+
+.project-btn {
+  color: black;
+  border-color: rgb(163, 163, 163);
+}
+
+/*Contact section*/
+
+#contact{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 70vh;
+}
+
+.contact-info-upper-container{
+  display: flex;
+  justify-content: center;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  background-color: rgb(250, 250, 250);
+  margin: 2rem auto;
+  padding: 0.5rem;
+}
+
+.contact-info-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: 1rem;
+}
+
+.contact-info-container p{
+  font-size: large;
+
+}
+
+.contact-icon{
+  cursor: default;
+}
+
+.email-icon{
+  height: 3rem;
+}
+
+/* Footer Section*/
+
+footer{
+  height: 26vh;
+  margin: 0 1rem;
+}
+footer p{
+  text-align: center;
+}
